--- a/package.json
+++ b/package.json
@@ -1,104 +1,72 @@
 {
-	"name": "walletconnect-monorepo",
-	"description": "Monorepo for WalletConnect",
-	"private": true,
-	"keywords": [
-		"wallet",
-		"walletconnect",
-		"ethereum",
-		"jsonrpc",
-		"mobile",
-		"qrcode",
-		"web3",
-		"crypto",
-		"cryptocurrency",
-		"dapp"
-	],
-	"author": "WalletConnect, Inc. <walletconnect.com>",
-	"homepage": "https://github.com/WalletConnect/walletconnect-monorepo/",
-	"license": "Apache-2.0",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/terranc/walletconnect-monorepo.git"
-	},
-	"bugs": {
-		"url": "https://github.com/walletconnect/walletconnect-monorepo/issues"
-	},
-	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "2.20.0",
-		"@typescript-eslint/parser": "2.20.0",
-		"discord.js": "12.2.0",
-		"eslint": "5.16.0",
-		"eslint-config-prettier": "6.10.0",
-		"eslint-config-standard": "14.1.0",
-		"eslint-plugin-import": "2.20.1",
-		"eslint-plugin-node": "11.0.0",
-		"eslint-plugin-prettier": "3.1.2",
-		"eslint-plugin-promise": "4.2.1",
-		"eslint-plugin-react": "7.18.3",
-		"eslint-plugin-standard": "4.0.1",
-		"lerna": "3.20.2",
-		"npm-run-all": "4.1.5",
-		"prettier": "1.19.1",
-		"ts-node": "9.0.0"
-	},
-	"dependencies": {
-		"@babel/cli": "7.8.3",
-		"@babel/core": "7.8.3",
-		"@babel/node": "7.8.3",
-		"@babel/polyfill": "7.8.3",
-		"@babel/preset-env": "7.8.3",
-		"@babel/preset-typescript": "7.8.3",
-		"@babel/register": "7.8.3",
-		"@ethersproject/address": "5.0.0-beta.135",
-		"@types/chai": "4.2.14",
-		"@types/deepmerge": "2.2.0",
-		"@types/jest": "22.2.3",
-		"@types/lodash.isnumber": "3.0.6",
-		"@types/mocha": "8.0.4",
-		"@types/node": "12.12.14",
-		"@types/qrcode": "1.3.4",
-		"@types/react": "17.0.0",
-		"@types/react-native": "0.63.45",
-		"@walletconnect/crypto": "^1.0.2",
-		"@walletconnect/encoding": "^1.0.1",
-		"@walletconnect/jsonrpc-http-connection": "^1.0.0",
-		"@walletconnect/jsonrpc-provider": "^1.0.3",
-		"@walletconnect/jsonrpc-types": "^1.0.0",
-		"@walletconnect/jsonrpc-utils": "^1.0.0",
-		"@walletconnect/mobile-registry": "^1.4.0",
-		"@walletconnect/safe-json": "1.0.0",
-		"@walletconnect/window-getters": "1.0.0",
-		"@walletconnect/window-metadata": "1.0.0",
-		"bn.js": "4.11.8",
-		"chai": "4.2.0",
-		"copy-to-clipboard": "^3.3.1",
-		"css-loader": "3.5.3",
-		"detect-browser": "5.2.0",
-		"eip1193-provider": "1.0.1",
-		"ethereum-test-network": "0.1.6",
-		"ethers": "5.3.1",
-		"eventemitter3": "4.0.7",
-		"js-sha3": "0.8.0",
-		"keyvaluestorage": "0.7.1",
-		"microbundle": "0.11.0",
-		"mocha": "8.2.1",
-		"preact": "10.4.1",
-		"qrcode": "1.4.4",
-		"query-string": "6.13.5",
-		"react": "16.13.1",
-		"react-native": "0.63.4",
-		"react-native-qrcode-svg": "6.0.6",
-		"react-native-svg": "9.6.4",
-		"style-loader": "1.2.0",
-		"svg-url-loader": "5.0.0",
-		"ts-loader": "6.2.2",
-		"use-deep-compare-effect": "1.6.1",
-		"web3": "1.3.5",
-		"web3-provider-engine": "16.0.1",
-		"webpack": "4.41.5",
-		"webpack-cli": "3.3.10",
-		"ws": "7.5.3",
-		"xhr2-cookies": "1.1.0"
-	}
+  "name": "walletconnect-monorepo",
+  "description": "Monorepo for WalletConnect",
+  "private": true,
+  "keywords": [
+    "wallet",
+    "walletconnect",
+    "ethereum",
+    "jsonrpc",
+    "mobile",
+    "qrcode",
+    "web3",
+    "crypto",
+    "cryptocurrency",
+    "dapp"
+  ],
+  "author": "WalletConnect, Inc. <walletconnect.com>",
+  "homepage": "https://github.com/WalletConnect/walletconnect-monorepo/",
+  "license": "Apache-2.0",
+  "scripts": {
+    "ls": "lerna ls",
+    "bootstrap": "npm install && run-s bootstrap:monorepo bootstrap:example",
+    "bootstrap:monorepo": "lerna bootstrap --hoist",
+    "bootstrap:example": "cd example && npm install",
+    "build": "lerna run build",
+    "test": "lerna run test",
+    "lint": "eslint -c './.eslintrc' --fix 'packages/*/*/**/*.ts'",
+    "clean": "rm -rf dist && lerna run clean",
+    "clean:node_modules": "lerna exec -- rm -rf node_modules",
+    "clean:example": "cd example && rm -rf node_modules",
+    "clean:all": "run-s clean clean:node_modules clean:example",
+    "new-version": "lerna version --no-git-tag-version",
+    "npm-publish:latest": "lerna exec -- npm publish --access public",
+    "npm-publish:next": "lerna exec -- npm publish --access public --tag next",
+    "health-check": "node ./scripts/health-check/index.js",
+    "move-dist": "node ./scripts/move-dist.js",
+    "commit-version": "node ./scripts/commit-version.js",
+    "check:skip-test": "run-s clean lint build move-dist",
+    "check": "run-s clean lint build test move-dist",
+    "reset": "run-s clean:all bootstrap check",
+    "start": "cd example && npm run start",
+    "example": "run-s check:skip-test start",
+    "pre-publish": "run-s new-version reset commit-version",
+    "publish:latest": "run-s pre-publish npm-publish:latest",
+    "publish:next": "run-s pre-publish npm-publish:next"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/terranc/walletconnect-monorepo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/walletconnect/walletconnect-monorepo/issues"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "2.20.0",
+    "@typescript-eslint/parser": "2.20.0",
+    "discord.js": "12.2.0",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-node": "11.0.0",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-standard": "4.0.1",
+    "lerna": "3.20.2",
+    "npm-run-all": "4.1.5",
+    "prettier": "1.19.1",
+    "ts-node": "9.0.0"
+  }
 }
